--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,5 @@ export(pbs_fst)
 export(reynolds_fst)
 export(sliding_window_mean_dt)
 import(data.table)
-importFrom("grDevices", "gray")
-importFrom("graphics", "par")
-importFrom("stats", "as.formula", "median", "pnorm", "qnorm", "quantile", "sd")
+import(ggplot2)
+import(ggrepel)
