--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("Cainã Max", "Couto-Silva", email = "cmcouto.silva@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.4.3), ggplot2, ggrepel
-Imports: data.table
+Depends: R (>= 3.4.3)
+Imports: data.table, ggplot2, ggrepel
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
